new_tests/semantics/type/bad/055_RS2.cm

class A {
    public method print() => Void {
        return 'c'
    }
}
